ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/externalTrafficPolicy: Local
    # nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/24,172.10.0.1,106.198.106.7
  name: rendertron-ingress-resource
spec:
  rules:
    -
      http:
        paths:
          -
            backend:
              service:
                name: rendertron-svc
                port:
                  number: 3000
            path: /
            pathType: Prefix
